Album endpoints
