# src/main/kotlin/models/Album.kt
@@ -1,0 +1,13 @@
+package models
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class Album(
+    val id: String = "",
+    val title: String = "",
+    val artist: String = "",
+    val coverUrl: String = "",
+    val createdAt: String = "",
+    val genre: String = ""
+) 
